--- a/pom.xml
+++ b/pom.xml
@@ -17,19 +17,19 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.7.0</version>
+            <version>${junit-platform.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.7.0</version>
+            <version>${junit-platform.version}</version>
             <scope>test</scope>
         </dependency>
 	<dependency>
 	  <groupId>org.junit.jupiter</groupId>
 	  <artifactId>junit-jupiter-params</artifactId>
-	  <version>5.7.0</version>
+	  <version>${junit-platform.version}</version>
 	  <scope>test</scope>
 	</dependency>
 	<dependency>
@@ -62,6 +62,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M3</version>
                 <configuration>
+					<includes>
+					    <include>**/Test*.java</include>
+					    <include>**/*Test*.java</include>
+					    <include>**/*Tests.java</include>
+					</includes>
                   <testFailureIgnore>
                       true
                   </testFailureIgnore>
