--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>testJunit</groupId>
   <artifactId>testJunit</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-
-<properties>
+  
+  
+    <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
@@ -17,19 +18,19 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.7.0</version>
+            <version>${junit-platform.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.7.0</version>
+            <version>${junit-platform.version}</version>
             <scope>test</scope>
         </dependency>
 	<dependency>
 	  <groupId>org.junit.jupiter</groupId>
 	  <artifactId>junit-jupiter-params</artifactId>
-	  <version>5.7.0</version>
+	  <version>${junit-platform.version}</version>
 	  <scope>test</scope>
 	</dependency>
 	<dependency>
@@ -42,11 +43,6 @@
     </dependencies> 
   
     <build>
-
-        <sourceDirectory>src</sourceDirectory>
-        <!-- source test of the package -->
-        <testSourceDirectory>test</testSourceDirectory>
-
 
       <!--<sourceDirectory>src/main/java/packJunit</sourceDirectory>-->
      <!-- <testSourceDirectory>src/test/java/packJunit</testSourceDirectory> -->
@@ -88,5 +84,4 @@
         </plugins>
       </pluginManagement>
   </build>
-
 </project>
